Security on Azure

--- a/mvcathtech/appsettings.json
+++ b/mvcathtech/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyConnection": "Data Source=(local);Initial Catalog=eshopAth; Integrated Security = True;TrustServerCertificate=True; "
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "athtech.gr",
+    "TenantId": "b1732512-60e5-48fb-92e8-8d6902ac1349",
+    "ClientId": "d9ce7c82-f00c-4515-8826-f5df2d6f586b",
+    "CallbackPath": "/signin-oidc",
+    "ClientSecret": "Client secret from app-registration. Check user secrets/azure portal.",
+    "ClientCertificates": []
   }
 }
